Added option to specify path type. Added command to unstuck player from ground. Added help and proper messages for the player.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 main: io.github.sindastra.BukkitWalkPaths.Main
-version: 1.0.2
+version: 1.1.0
 name: SindastrasWalkPaths
 commands:
     walkpath:
         description: Walk a path!
-        usage: /walkpath
+        usage: Use "/walkpath help" for more details.
